[package]
name = "ink-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
zstd = { version = "0.13", default-features = false }
argon2 = "0.5"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
