[package]
name = "ink-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
zstd = { version = "0.13", default-features = false }
argon2 = "0.5"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
sss-rs = "0.12"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
